# GroupChat

./: README.md  package-lock.json  package.json
backendcpp/: CMakeLists.txt  main.cpp
kumi/: .gitignore  App.tsx  README.md  TODO.md  autoReply.tsx  comp.tsx  fileUploader.tsx  groups.tsx  mediaview.tsx  messagechat.tsx  package-lock.json  package.json  theme.tsx
kumi/android/: build.gradle  settings.gradle
kumi/android/app/: build.gradle
kumi/android/app/src/main/java/com/kumi/: BackendModule.kt  BackendPackage.kt  MainActivity.kt  MainApplication.kt
kumi/android/backendcpp/: CMakeLists.txt  build.gradle  main.cpp
kumi/ios/kumi.xcodeproj/xcshareddata/xcschemes/: kumi.xcscheme
kumi/patches/: react-native-document-picker+9.3.1.patch  react-native-image-picker+7.2.3.patch  react-native-safe-area-context+4.10.9.patch
kumi2/: .gitignore  App.tsx  app.json  groups.tsx
kumi2/android/: settings.gradle
kumi2/android/app/src/main/java/com/kumi/: MainActivity.kt
kumi2/android/app/src/main/res/values/: strings.xml
kumi2/ios/: Podfile
kumi2/ios/kumi/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
kumi2/ios/kumi.xcodeproj/: project.pbxproj
